# Oasis

./: .env.example  .gitignore  Current_Info_Staged.md  README.md  System_Next_Stages_to_Update.md  bootstrap.py  build_briefing.py  build_events.py  build_indonesia_batch.py  build_map_geojson.py  build_store.py  cache_companyfacts.py  comps.py  crawl_sic.py  data_sources.py  dcf_export.py  dedupe_report.py  expand_us.py  gates.py  geocode_hq_coords.py  map_api.py  oasis_paths.py  package-lock.json  package.json  playwright.config.js  political.py  political_trades_provider.py  pyproject.toml  refresh_all.py  refresh_edge_candidates.py  refresh_filings.py  refresh_financial_facts.py  refresh_gleif.py  refresh_gov_contracts.py  refresh_news.py  refresh_pol_trades.py  refresh_politicians.py  refresh_prices.py  refresh_sec_addresses.py  requirements.txt  (+25 more)
.agents/: AGENTS.md
Prompts/: 00-README.md  01-repo-hygiene-git-debloat.md  02-api-caching-and-payload.md  03-gleif-identifiers.md  04-sec-hq-addresses.md  05-pipeline-and-tests.md  06-frontend-module-split.md  07-product-shell.md  08-object-drawers-provenance.md  09-terrain-aws-switch.md  10-duckdb-parquet-foundation.md  11-reverse-dcf-and-comps.md  12-engine-lenses-workspaces.md  13-political-exposure-data.md  14-political-exposure-ui.md  15-event-pipeline-briefing.md  16-rebuild-and-store-migration.md  17-political-trades-source.md  18-prelaunch-hardening.md  19-phase0-launch-safety.md  MAP-STUDIO.md
archive/: README.md  ingest.py  load_neo4j.py
config/: sources.yaml
db/: postgis_schema.sql
docs/: DEPLOYMENT-BLUEPRINT.md  IDS.md  IN-FLIGHT-WORK-AUDIT.md  INTAKE.md  PHASE-0-LAUNCH-SAFETY.md  reliefs_usgs_3dep.md
graph/: index.html
prompts/: 00-INDEX.md  01-move-curated-data-to-json.md  02-backfill-edge-evidence.md  03-render-visible-nodes-only.md  04-aliases-json.md  05-gov-contract-queries-json.md  (+12 more)
(+1444 files in other folders)
